2006-08-04  Mo DeJong  <mdejong@users.sourceforge.net>

        * Makefile.in: Remove new_features.txt.
        * README.jacl:
        * README.tclblend: Mention WhatsNew.html.
        * new_features.txt: Removed.
        * docs/Topics/WhatsNew.html: Create a
        New Features HTML page containing new 1.4
        features and importing the old entries
        from new_features.txt.
        * docs/Topics/index.html: Add link
        to WhatsNew.html.

2006-08-04  Mo DeJong  <mdejong@users.sourceforge.net>

        * src/tcljava/tcl/lang/TclClassLoader.java:
        Avoid throwing NullPointerException when
        method can just return null.
        * src/tjc/tcl/lang/TJCThread.java: Refactor
        the TJCThread class so that state variables
        become instance variables instead of static
        ones. This makes it possible to start the
        service again after it has been canceled
        without having to wait for the previous
        thread to die.

2006-08-03  Mo DeJong  <mdejong@users.sourceforge.net>

        * src/jacl/tcl/lang/EventuallyFreed.java:
        Add debug statements.
        * src/jacl/tcl/lang/Interp.java (Interp, dispose,
        eventuallyDispose, finalize, transferResult,
        invoke, setInterrupted, toString):
        Reimplment dispose() and eventuallyDispose() so
        that interp is marked as deleted in the same
        way as Tcl 8.4. Print an error message to
        stderr in finalize() if an interp that was not
        deleted is finalized, the previous finalize
        implementation did not work since it always
        raised an exception. Don't error out in
        transferResult if interp has been deleted.
        Return Interp description in toString() method.
        * src/jacl/tcl/lang/InterpAliasCmd.java (cmdProc):
        * src/jacl/tcl/lang/InterpSlaveCmd.java (cmdProc):
        Call Interp.release() in finally block so that
        release is invoked even if an exception is raised.